# db-mockdata

./: README.md  main.py  mock-data.json  pyproject.toml  requirements.txt
.github/workflows/: pypi-push.yml
db-mockdata/: __init__.py
db_mockdata/: main.py
