[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "db-mockdata"
urls = ["https://github.com/Experrior/db-mockdata"]
license = { text = "MIT License" }
version = "0.1.03"
description = "Simple package for creating mockdata for a live database, according to specified relational schema."
readme = "README.md"
authors = [{name = "Mateusz Molenda", email = "devexperrior@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "argparse>=1.4.0",
    "faker>=25.2.0",
    "networkx>=3.3",
    "psycopg2-binary>=2.9.9",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.30",
    "tqdm>=4.66.4"
]

